# Session-Sniffer

./: .flake8  .gitattributes  .gitignore  CLAUDE.md  README.md  check_dependencies.ps1  check_project_dependencies.ps1  code-quality-checks.ps1  pyproject.toml  release_versions.json  requirements.txt  session_sniffer.py  test_ctypes_adapters.py  update_dependencies.ps1  verify_ranges.py  whitelist.py
.agents/: AGENTS.md
.dev/: verify_ranges.py
.github/: copilot-instructions.md
.github/workflows/: Session_Sniffer.spec  build.yml
.github/workflows/scripts/: update_release_versions.py
modules/: __init__.py  error_messages.py  exceptions.py  logging_setup.py  msgbox.py  text_utils.py  updater.py  utils.py  utils_exceptions.py
modules/capture/: __init__.py  exceptions.py  interface_selection.py  tshark_capture.py
modules/capture/utils/: __init__.py  check_tshark_filters.py  npcap_checker.py
modules/constants/: __init__.py  external.py  local.py  standalone.py  standard.py
modules/discord/: __init__.py  rpc.py
modules/guis/: app.py  exceptions.py  html_templates.py  interface_selection_dialog.py  stylesheets.py  utils.py
modules/launcher/: __init__.py  package_checker.py
modules/models/: __init__.py  github_release.py  github_versions.py  ip_api.py
modules/networking/: __init__.py  ctypes_adapters_info.py  endpoint_ping_manager.py  exceptions.py  geolite2_readers.py  geolite2_service.py  geolite2_updater.py  http_session.py  interface.py  manuf_lookup.py  reverse_dns.py  utils.py  wmi_utils.py
modules/networking/geolite2/: __init__.py  service.py
modules/rendering_core/: modmenu_logs_parser.py
modules/updater/: __init__.py  result_types.py  updater_service.py  version_fetcher.py
scripts/: spoofed_ping.py
src/session_sniffer/: __main__.py  ctypes_console.py  ctypes_wintrust.py  diagnostics.py  error_messages.py  exceptions.py  logging_setup.py  main.py  msgbox.py  text_templates.py  text_utils.py  updater.py  utils.py  utils_exceptions.py
src/session_sniffer/background/: __init__.py  cores.py  events.py  suspend_manager.py  tasks.py
src/session_sniffer/capture/: arp_spoofing.py  exceptions.py  filters.py  interface_setup.py  packet_capture.py  tshark_capture.py
src/session_sniffer/capture/utils/: arp_refresh.py  check_capture_filters.py  check_tshark_filters.py  ctypes_win32.py  npcap_checker.py
src/session_sniffer/constants/: __init__.py  _build_info.py  external.py  local.py  standalone.py  standard.py  third_party_servers.py
src/session_sniffer/core/: __init__.py  control.py
src/session_sniffer/discord/: __init__.py  rpc.py  webhook.py
src/session_sniffer/gta5/: __init__.py  monitor.py  process.py  suspend_manager.py
src/session_sniffer/guis/: __init__.py  _combo_rule_editor.py  _crashing_qthread.py  _detections_manager_tabs.py  _dialog_mixins.py  _main_window_files_mixin.py  _main_window_gta5_mixin.py  _main_window_looky_mixin.py  _main_window_stats_mixin.py  _player_identifier_core.py  _player_leaderboard_loading_dialog.py  _player_leaderboard_workers.py  _session_table_section.py  _settings_looky_mixin.py  _settings_widget_builders.py  app.py  avg_session_duration.py  capture_health_window.py  capture_statistics_window.py  colors.py  country_breakdown.py  country_data.py  detections_manager.py  discord_intro.py  exceptions.py  file_watch.py  high_pps_monitor.py  html_templates.py  interface_selection.py  interface_selection_dialog.py  looky_text.py  main_window.py  packets_latency_graph.py  player_identifier.py  player_leaderboard.py  player_rate_graph.py  player_resolver.py  port_heatmap.py  protections_manager.py  rate_graph_widget.py  (+29 more)
src/session_sniffer/guis/logs_manager/: __init__.py  _csv_tab.py  _dialog.py  _helpers.py  _sessions_tab.py  _text_tab.py
src/session_sniffer/guis/stylesheets/: __init__.py  _buttons.py  _combo_detections.py  _gta5.py  _interface.py  _menus.py  _misc.py  _player.py  _section_bar.py  _userip.py
src/session_sniffer/guis/tables_player_actions/: __init__.py  _actions.py  _crawler_request_dialog.py  _detection_dialogs.py  _fmt.py  _format.py  _ip_lookup_dialog.py  _looky_helpers.py  _looky_lookup_dialog.py  _looky_refresh_userip.py  _player_info_dialog_mixin.py  _seen_stats_dialog.py  _userip_dialog.py
src/session_sniffer/launcher/: package_checker.py
src/session_sniffer/models/: __init__.py  github_release.py  github_versions.py  ip_api.py  looky.py  looky_system.py  player.py  player_lookup.py  player_traffic.py  sessions_log.py  settings_ini_model.py  userip_settings_model.py
src/session_sniffer/networking/: adapter_types.py  bridge_ics.py  ctypes_adapters_info.py  endpoint_ping_manager.py  exceptions.py  http_session.py  interface.py  ip_range.py  looky.py  looky_system.py  manuf_lookup.py  reverse_dns.py  third_party_servers.py  third_party_servers_ranges.py  utils.py
src/session_sniffer/networking/geolite2/: __init__.py  readers.py  service.py  updater.py
src/session_sniffer/player/: __init__.py  combo_rules.py  detections.py  protections.py  registry.py  seen_stats.py  userip.py  warnings.py
src/session_sniffer/rendering_core/: modmenu_logs_parser.py  renderer.py  session_table_renderer.py  status_bar_renderer.py  types.py  userip_ini_parser.py  webhook_text_renderer.py
src/session_sniffer/settings/: __init__.py  defaults.py  settings.py
src/session_sniffer/webserver/: __init__.py  server.py
src/session_sniffer/webserver/static/: index.html
