[build-system]
requires = [
    "setuptools>=69.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "session_sniffer"
version = "v1.5.0rc.14+20260530.1907"
dependencies = [
    "aiohttp==3.13.5",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "geoip2==5.2.0",
    "packaging==26.2",
    "prettytable==3.17.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "pypresence==4.6.1",
    "PyQt6==6.8.1",
    "pyqtgraph==0.14.0",
    "pywin32==311; platform_system == 'Windows'",
    "QDarkStyle==3.2.3",
    "requests==2.34.2",
    "rich==15.0.0",
    "scapy==2.7.0",
    "sentinel==1.0.0",
    "toml==0.10.2",
    "tzlocal==5.3.1",

    # Security fixes
    "certifi>=2024.7.4",
    "idna>=3.7",
]
requires-python = ">=3.14,<3.15"
authors = [
    {name = "BUZZARDGTA"},
]
description = "A packet sniffer (also known as an IP sniffer/puller) specifically designed for Peer-To-Peer (P2P) video games on PC and consoles (PlayStation and Xbox)."
license = { file = "COPYING" }
readme = "README.md"

[project.urls]
Documentation = "https://github.com/BUZZARDGTA/Session-Sniffer/wiki"
Repository = "https://github.com/BUZZARDGTA/Session-Sniffer"
Issues = "https://github.com/BUZZARDGTA/Session-Sniffer/issues"
Discord = "https://discord.gg/hMZ7MsPX7G"

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pip-audit",
    "pylint",
    "pyright",
    "ruff",
    "safety",
    "ty",
    "types-psutil==7.2.2.20260518",
    "types-requests==2.33.0.20260518",
    "types-toml==0.10.8.20260518",
    "vulture",
]


[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "session_sniffer.discord.rpc"
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
module = "session_sniffer.error_messages"
warn_unused_ignores = false


[tool.pylint.master]
enable = "all"
extension-pkg-allow-list = ["PyQt6", "pythoncom"]
generated-members = ["pythoncom.*"]
ignore = [
    ".dev",
    ".history",
    ".venv",
]
ignore-patterns = "^\\.#|.*\\.pyi"
py-version = "3.14"
recursive = true

[tool.pylint.format]
max-line-length = 176

[tool.pylint."messages control"]
disable = [
    "consider-using-with",
    "fixme",
    "global-statement",
    "locally-disabled",
    "no-name-in-module",  # TODO (BUZZARDGTA): unsupported in Python 3.14
    "redefined-outer-name",
    "suppressed-message",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-locals",
    "too-many-statements",
    "used-before-assignment",  # TODO (BUZZARDGTA): unsupported in Python 3.14
]

[tool.pylint.basic]
const-rgx = "(^[A-Z_][A-Z0-9_]*$|^_atexit_registered$)"
good-names = [
    "_atexit_registered",
    "_OPER_STATUS_FLAGS",
    "closeEvent",
    "eventFilter",
    "filterAcceptsRow",
    "highlightBlock",
    "horizontalHeader",
    "InterfaceIndex",
    "IP_ADAPTER_ADDRESSES",
    "IP_ADAPTER_GATEWAY_ADDRESS",
    "IP_ADAPTER_UNICAST_ADDRESS",
    "keyPressEvent",
    "MIB_IF_ROW2",
    "MIB_IPNETROW",
    "mouseMoveEvent",
    "mousePressEvent",
    "mouseReleaseEvent",
    "columnCount",
    "headerData",
    "rowCount",
    "SOCKET_ADDRESS",
    "SOCKADDR_IN",
    "selectionModel",
    "setModel",
    "verticalHeader",
]
method-rgx = "^(__[a-z][a-z0-9_]*__|_?[a-z][a-z0-9_]*|closeEvent|columnCount|eventFilter|filterAcceptsRow|headerData|highlightBlock|horizontalHeader|keyPressEvent|lessThan|mouseMoveEvent|mousePressEvent|mouseReleaseEvent|rowCount|selectionModel|setModel|verticalHeader)$"

[tool.pylint.variables]
allowed-redefined-builtins = ["object"]


[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Windows"
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "none"
reportUnknownMemberType = "none"
extraPaths = ["src"]
venvPath = "."
venv = ".venv"


[tool.ruff]
target-version = "py314"
line-length = 176
exclude = [
    ".history",
    ".venv",
]

[tool.ruff.lint]
ignore = [
    "C901",    # complex-structure
    "ERA001",  # commented-out-code
    "FIX002",  # line-contains-todo
    "PLR0912", # too-many-branches
    "PLR0915", # too-many-statements
    "S602",    # subprocess-popen-with-shell-equals-true
    "S603",    # subprocess-without-shell-equals-true
    "S606",    # start-process-with-no-shell
    "TD003",   # missing-todo-link
    "TD005",   # missing-todo-description
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = [
    "session_sniffer",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "typing.NamedTuple",
]


[tool.ty.environment]
python-platform = "win32"
python-version = "3.14"

[tool.ty.src]
exclude = [
    ".history",
]

[tool.ty.rules]
all = "error"

[tool.ty.terminal]
error-on-warning = true  # Error if ty emits any warning-level diagnostics.


[tool.vulture]
exclude = [
    ".history",
    ".venv",
    "src/session_sniffer/models/settings_ini_model.py",
    "src/session_sniffer/models/userip_settings_model.py",
    "src/session_sniffer/models/player.py",
    "src/session_sniffer/models/*.py",
    "src/session_sniffer/constants/third_party_servers.py",
    "src/session_sniffer/constants/standard.py",
    "src/session_sniffer/msgbox.py",
    "src/session_sniffer/guis/*.py",
    "src/session_sniffer/guis/*/*.py",
    "src/session_sniffer/guis/capture_health_window.py",
    "src/session_sniffer/guis/colors.py",
    "src/session_sniffer/guis/detections_manager.py",
    "src/session_sniffer/guis/high_pps_monitor.py",
    "src/session_sniffer/guis/logs_manager/_csv_tab.py",
    "src/session_sniffer/guis/logs_manager/_text_tab.py",
    "src/session_sniffer/guis/main_window.py",
    "src/session_sniffer/guis/player_identifier.py",
    "src/session_sniffer/guis/player_leaderboard.py",
    "src/session_sniffer/guis/session_summary.py",
    "src/session_sniffer/guis/stylesheets.py",
    "src/session_sniffer/guis/tables.py",
    "src/session_sniffer/networking/ctypes_adapters_info.py",
    "src/session_sniffer/networking/exceptions.py",
    "src/session_sniffer/networking/interface.py",
    "src/session_sniffer/networking/ip_range.py",
    "src/session_sniffer/networking/utils.py",
    "src/session_sniffer/networking/*.py",
    "src/session_sniffer/player/combo_rules.py",
    "src/session_sniffer/player/registry.py",
    "src/session_sniffer/player/seen_stats.py",
    "src/session_sniffer/player/userip.py",
    "src/session_sniffer/player/warnings.py",
    "src/session_sniffer/player/*.py",
    "src/session_sniffer/rendering_core/types.py",
    "src/session_sniffer/rendering_core/*.py",
    "src/session_sniffer/settings/defaults.py",
    "src/session_sniffer/settings/settings.py",
    "src/session_sniffer/background/suspend_manager.py",
    "src/session_sniffer/error_messages.py",
    "src/session_sniffer/exceptions.py",
    "src/session_sniffer/utils_exceptions.py",
    "src/session_sniffer/utils.py",
]
min_confidence = 61
ignore_names = [
    "validate_nodes",
    "thread_name",
    "field_names",
    "highlightBlock",
    "filterAcceptsRow",
    "tickStrings",
    "flush",
    "nameservers",
    "lifetime",
    "snapshot_version",
    "num_cols",
    "_baseline",
    "_baseline_floor",
]
